SFDC_Learning/src/objects/Offers__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Salary__c</fullName>
        <label>Actual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Percentage__c</fullName>
        <label>Bonus Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Expiration_Date__c</fullName>
        <label>Offer Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Number__c</fullName>
        <label>Offer Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <label>Position Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Options__c</fullName>
        <label>Stop Options</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>